tela de serviços

--- a/src/app/pages/produtos/produtosCadastro.component.html
+++ b/src/app/pages/produtos/produtosCadastro.component.html
@@ -63,7 +63,7 @@
                         </td>
                         <td style="width:15%; min-width:10rem;">
                             <span class="p-column-title">Preço</span>
-                            {{"R$" + produto.valor}}
+                            {{produto.valorStr}}
                         </td>
                         <td style="width:32%; min-width:10rem;">
                             <span class="p-column-title">Descricao</span>
